Bug 376903 - Could not render animation FFmpeg failed to convert the image sequence
Summary: Could not render animation FFmpeg failed to convert the image sequence
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 3.1.2
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-25 05:53 UTC by Seyl
Modified: 2018-04-12 05:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
the log file (3.32 KB, text/plain)
2017-02-25 05:53 UTC, Seyl
Details
what a frame looks like (80.80 KB, image/jpeg)
2017-02-25 05:54 UTC, Seyl
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Seyl 2017-02-25 05:53:25 UTC
Created attachment 104208 [details]
the log file

I got the error message
Could not render animation:
FFMpeg failed to convert the image sequence. Check the logfile in your output directory for more information.
when attempting to render a gif. 

I'm an absolute noob so I don't even have the slightest clue how to begin comprehending this.

I'm trying to render a fairy simple animation. It's 66 frames long, and doesn't have too many colors, but does have a gradient. 
It fails immediately upon trying but does give me a log file.

I'm using windows 10, and the log file is in the folder I try to render a sequence into. I'm using ffmpeg version 20170223-dcd3418.

Could anyone explain to me how to unravel this in layman terms?
Comment 1 Seyl 2017-02-25 05:54:48 UTC
Created attachment 104209 [details]
what a frame looks like
Comment 2 Halla Rempt 2017-02-27 13:27:07 UTC
Hi Seyl,

Could you also make the original .kra file available? For instance, if your .kra file uses 16 bits floating point for channel, the frames cannot be saved to PNG, and the animation export will fail.
Comment 3 Seyl 2017-03-04 22:32:03 UTC
Sorry for the late reply and thank you! 
It's too large to add as an attachment so I've uploaded it to a cloud. 
https://drive.google.com/file/d/0B0DAW46corccTWNoazhIX25oN3M/view?usp=sharing
Comment 4 Seyl 2017-03-12 06:55:50 UTC
I have attempted to render a different animation. It's still a no go though
https://drive.google.com/drive/folders/0B0DAW46corccemlaSWxqdWlhNGs?usp=sharing

Attached in the drive is both the original file and the log for the second animation. 
Also for both files I'm using 32 bit float channel.
Comment 5 Halla Rempt 2017-06-06 09:16:00 UTC
Yes, the channel depth is the problem. Krita 3.x doesn't automatically convert incompatible images when saving as png, and you need to save as png for ffmpeg to work. The only file formats that support 32 bits floating channel are .kra and .exr. But 32 bits float is only needed when you want to play with HDR tricks like exposure -- for your project it's overkill and makes the file take 4 times as much memory as needed!

It's one of the most impressive animations I've ever seen, by the way!

I'll try to backport the automatic down-conversion to 8 bits channel when exporting a 32 bits/channel file to png to Krita 3.2 -- that is already in the master branch, but I don't have windows builds of that yet.
Comment 6 Halla Rempt 2017-06-06 09:28:53 UTC
Git commit fc3249033007778e099d863f0c95ff688c77a1f3 by Boudewijn Rempt.
Committed on 06/06/2017 at 09:27.
Pushed by rempt into branch 'krita/3.2'.

Do not abort exporting to png if the channel depth or color model is incompatible

We now warn the user that the image will be converted to 8 bits
integer, and then allow the export to proceed.

M  +3    -3    plugins/impex/png/kis_png_export.cc

https://commits.kde.org/krita/fc3249033007778e099d863f0c95ff688c77a1f3
Comment 7 Daniel M. 2018-04-12 05:35:03 UTC
Excuse me, but what do I do to fix this? I have the same issue.
Comment 8 Daniel M. 2018-04-12 05:35:44 UTC
Excuse me, but what do I do to fix this? I have the same issue.
Comment 9 Daniel M. 2018-04-12 05:35:50 UTC
Excuse me, but what do I do to fix this? I have the same issue.
Comment 10 Daniel M. 2018-04-12 05:37:11 UTC
I didn't mean to send that 3 times. Sorry.