Do not abort exporting to png if the channel depth or color model is incompatible

We now warn the user that the image will be converted to 8 bits
integer, and then allow the export to proceed.

BUG:376903